--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -15,7 +15,7 @@
  */
 
 apply plugin: 'com.android.application'
-apply from: rootProject.file('checkstyle.gradle')
+//apply from: rootProject.file('checkstyle.gradle')
 
 android {
     compileSdkVersion build_versions.target_sdk
